# eCommerce

./: .gitignore  Makefile  README.md  pyproject.toml
apps/product/: forms.py  models.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py  0002_product_slug.py
apps/user/: admin.py  forms.py  managers.py  models.py  views.py
apps/user/migrations/: 0001_initial.py
core/: manage.py
core/Ecommerce/: asgi.py  settings.py  urls.py  wsgi.py
static/eCommerce/css/: index.css
static/eCommerce/js/: index.js
templates/: _base.html  search_results.html
templates/footer/: footer.html
templates/header/: header.html
templates/main/home/: featured_products.html  hero_section.html  home.html
templates/main/home/product/: add_product.html  delete_product.html  product_detail.html  update_product.html
templates/registration/: login.html  signup.html
utils/: constants.py
