[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = "Backend Development Skill Test Task"
authors = ["Saugat Magar <saugatmagar433@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
